--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-    "name": "cryptonote-util",
+    "name": "diamoneum-util",
     "version": "0.0.1",
-    "main": "cryptonote",
+    "main": "diamoneum",
     "author": {
         "name": "LucasJones",
         "email": "lucasjonesdev@hotmail.co.uk"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/LucasJones/node-cryptonote-util.git"
+        "url": "https://github.com/Diamoneum/diamoneum-cryptonote-util.git"
     },
     "dependencies" : {
         "bindings" : "*"
     },
     "keywords": [
+        "diamoneum",
+        "diam",
         "cryptonight",
         "cryptonote"
     ]
